# kira-secretion

./: CACHE_FILE.md  Cargo.toml  PIPELINE.md  README.md
assets/panels/: core.toml
src/: lib.rs  main.rs
src/aggregate/: sample.rs
src/cli/: mod.rs  panels.rs  run.rs  validate.rs
src/expr/: csc.rs  mod.rs  normalize.rs
src/input/: barcodes.rs  cache.rs  detect.rs  features.rs  meta.rs  mod.rs  mtx.rs
src/model/: axes.rs  drivers.rs  flags.rs  mod.rs  regimes.rs  scores.rs  thresholds.rs
src/panels/: defs.rs  loader.rs  mapping.rs  mod.rs
src/pipeline/: mod.rs  stage1_load.rs  stage2_normalize.rs  stage3_panels.rs  stage4_axes.rs  stage5_scores.rs  stage6_classify.rs  stage7_report.rs
src/report/: json.rs  text.rs
src/simd/: avx2.rs  mod.rs  neon.rs
tests/src_inline/cli/: mod.rs
tests/src_inline/expr/: csc.rs
tests/src_inline/input/: cache.rs  detect.rs  features.rs  mtx.rs
tests/src_inline/model/: drivers.rs
tests/src_inline/panels/: loader.rs  mapping.rs
tests/src_inline/pipeline/: stage1_load.rs  stage2_normalize.rs  stage3_panels.rs  stage4_axes.rs  stage5_scores.rs  stage6_classify.rs  stage7_report.rs
tests/src_inline/simd/: mod.rs
